add image folder

--- a/CSS only Carousel/index.html
+++ b/CSS only Carousel/index.html
@@ -22,16 +22,35 @@
 
         <!-- Carousel Slides -->
         <div class="carousel-slides">
-            <div class="slide" style="background-color: #ff6f61;">Slide 1</div>
-            <div class="slide" style="background-color: #6f9cff;">Slide 2</div>
-            <div class="slide" style="background-color: #61ff6f;">Slide 3</div>
-            <div class="slide" style="background-color: #ffcc00;">Slide 4</div>
-            <div class="slide" style="background-color: #ff66cc;">Slide 5</div>
-            <div class="slide" style="background-color: #00b3b3;">Slide 6</div>
-            <div class="slide" style="background-color: #b3b3ff;">Slide 7</div>
-            <div class="slide" style="background-color: #ff9966;">Slide 8</div>
-            <div class="slide" style="background-color: #33cc33;">Slide 9</div>
-            <div class="slide" style="background-color: #ff3399;">Slide 10</div>
+            <div class="slide" >
+                <img src="images/apex.jpg" alt="Apex">
+            </div>
+            <div class="slide" >
+                <img src="images/asphalt.jpg" alt="Asphalt">
+            </div>
+            <div class="slide" >
+                <img src="images/Kratos’ Wrath.jpg" alt="Wrath">
+            </div>
+            <div class="slide" >
+                <img src="images/avengers.jpeg" alt="Avengers">
+            </div>
+            <div class="slide" >
+                <img src="images/nexus war civilization.jpg" alt="Nexus War">
+            </div>
+            <div class="slide">
+                <img src="images/pokemon.jpg" alt="Pokemon">
+            </div>
+            <div class="slide">
+                <img src="images/stunt car extreme.jpg" alt="Stunt Car">
+            </div>
+            <div class="slide">
+                <img src="images/freefire.jpg" alt="FreeFire">
+            </div>
+            <div class="slide">
+                <img src="images/harry potter.jpg" alt="Harry Potter">
+            </div>
+            <div class="slide">
+                <img src="images/gaming about.jpg" alt="Gaming Room"></div>
         </div>
 
         <!-- Navigation Dots -->
