--- a/CSS Sticky Notes/index.html
+++ b/CSS Sticky Notes/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>CSS Sticky Notes </h1>
+    <div id="sticky">
   <div class="note">
     <div class="note-header">
       <h3>Learn React</h3>
@@ -27,7 +29,6 @@
     </div>
   </div>
 
-  <!-- Add more notes as needed -->
-
+</div>
 </body>
 </html>
