--- a/Elegant Event Invitation Page/index.html
+++ b/Elegant Event Invitation Page/index.html
@@ -17,12 +17,12 @@
             <div class="details">
                 <p><strong>Date:</strong> March 16, 2025</p>
                 <p><strong>Time:</strong> 6:00 PM - 10:00 PM</p>
-                <p><strong>Venue:</strong> Maya Farm House, Behrampur, U.P., India</p>
+                <p><strong>Venue:</strong>Budh Vihar Noida Sec-63, U.P., India</p>
             </div>
             <button class="rsvp-btn">RSVP Now</button>
         </div>
         <div class="footer">
-            <p>Need help? Contact us at <a href="mailto:events@techgala.com">events@techgala.com</a></p>
+            <p>Need help? Contact us at <a href="mailto:aitools4616@gmail.com">aitools4616@gmail.com</a></p>
         </div>
     </div>
 </body>
