--- a/Grid Magazine Layout/index.html
+++ b/Grid Magazine Layout/index.html
@@ -9,82 +9,83 @@
 <body>
     <div class="magazine">
         <header class="magazine-header">
-            <h1>Magazine Title</h1>
+            <h1>Technology Magazine</h1>
+            <br>
             <p>Explore the world of technology and innovation</p>
         </header>
         
+        <h2 align="center">Feature Article</h2>
+        <div class="grid-item main-content">
+            <img src="images\ai.jpg" alt="Main Image" class="main-img">
+            <p> <br><b>This is the main feature article of the magazine. It discusses the latest trends in technology, with insights from industry leaders and experts. <br>The article covers various topics such as AI, robotics, and future tech innovations.</b></p>
+        </div>
         <div class="grid-container">
-            <div class="grid-item main-content">
-                <h2>Feature Article</h2>
-                <img src="https://via.placeholder.com/400x250" alt="Main Image">
-                <p>This is the main feature article of the magazine. It discusses the latest trends in technology, with insights from industry leaders and experts. The article covers various topics such as AI, robotics, and future tech innovations.</p>
-            </div>
             <div class="grid-item">
-                <img src="https://via.placeholder.com/200x150" alt="Image 1">
+                <img src="images\tech conference highlights.jpg" alt="Image 1">
                 <p>Tech Conference Highlights</p>
             </div>
             <div class="grid-item">
-                <img src="https://via.placeholder.com/200x150" alt="Image 2">
+                <img src="images\top gadgets.jpg" alt="Image 2">
                 <p>Top Gadgets of the Year</p>
             </div>
             <div class="grid-item">
-                <img src="https://via.placeholder.com/200x150" alt="Image 3">
+                <img src="images\ai and ml.jpg" alt="Image 3">
                 <p>AI and Machine Learning</p>
             </div>
             <div class="grid-item">
-                <img src="https://via.placeholder.com/200x150" alt="Image 4">
+                <img src="images\smart home.jpg" alt="Image 4">
                 <p>Smart Home Devices</p>
             </div>
             <div class="grid-item">
-                <img src="https://via.placeholder.com/200x150" alt="Image 5">
+                <img src="images\future of smart.jpg" alt="Image 5">
                 <p>Future of Smartphones</p>
             </div>
             <div class="grid-item">
-                <img src="https://via.placeholder.com/200x150" alt="Image 6">
+                <img src="images\virtual reality.jpg" alt="Image 6">
                 <p>Virtual Reality in Gaming</p>
             </div>
             <div class="grid-item">
-                <img src="https://via.placeholder.com/200x150" alt="Image 7">
+                <img src="images\cybersecurity trends.jpg" alt="Image 7">
                 <p>Cybersecurity Trends</p>
             </div>
             <div class="grid-item">
-                <img src="https://via.placeholder.com/200x150" alt="Image 8">
+                <img src="images\blockchain.jpg" alt="Image 8">
                 <p>Blockchain Technology</p>
             </div>
             <div class="grid-item">
-                <img src="https://via.placeholder.com/200x150" alt="Image 9">
+                <img src="images\5g network.jpg" alt="Image 9">
                 <p>5G Networks</p>
             </div>
             <div class="grid-item">
-                <img src="https://via.placeholder.com/200x150" alt="Image 10">
+                <img src="images\cloud computing.jpg" alt="Image 10">
                 <p>Cloud Computing</p>
             </div>
             <div class="grid-item">
-                <img src="https://via.placeholder.com/200x150" alt="Image 11">
+                <img src="images\wearable watch.jpg" alt="Image 11">
                 <p>Wearable Tech</p>
             </div>
             <div class="grid-item">
-                <img src="https://via.placeholder.com/200x150" alt="Image 12">
+                <img src="images\tech startup.jpg" alt="Image 12">
                 <p>Tech Startups</p>
             </div>
             <div class="grid-item">
-                <img src="https://via.placeholder.com/200x150" alt="Image 13">
+                <img src="images\augmented reality.jpg" alt="Image 13">
                 <p>Augmented Reality</p>
             </div>
             <div class="grid-item">
-                <img src="https://via.placeholder.com/200x150" alt="Image 14">
+                <img src="images\space exploration.jpg" alt="Image 14">
                 <p>Space Exploration</p>
             </div>
             <div class="grid-item">
-                <img src="https://via.placeholder.com/200x150" alt="Image 15">
+                <img src="images\smart cities.jpg" alt="Image 15">
                 <p>Smart Cities</p>
             </div>
             <div class="grid-item">
-                <img src="https://via.placeholder.com/200x150" alt="Image 16">
+                <img src="images\Quantum computing.jpg" alt="Image 16">
                 <p>Quantum Computing</p>
             </div>
             <div class="grid-item">
-                <img src="https://via.placeholder.com/200x150" alt="Image 17">
+                <img src="images\autonomous vehicle.jpg" alt="Image 17">
                 <p>Autonomous Vehicles</p>
             </div>
         </div>
